--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "graphql": "^14.0.2",
     "graphql-tag": "2.10.3",
     "isomorphic-unfetch": "^3.0.0",
+    "js-cookie": "^2.2.1",
     "next": "latest",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
